force-app/main/default/objects/Potential_Product__c/Potential_Product__c.object-meta.xml
<CustomObject>
    <label>Product (Products of Choice)</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products (Products of Choice)</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>