force-app/main/default/objects/Potential_Product__c/fields/ECLASS_Code__c.field-meta.xml
<CustomField>
    <fullName>ECLASS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ECLASS Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>