force-app/main/default/objects/Potential_Product__c/fields/OPS_Code__c.field-meta.xml
<CustomField>
    <fullName>OPS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OPS Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>