force-app/main/default/objects/Potential_Product__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2Med</fullName>
            </value>
            <value>
                <fullName>3di</fullName>
            </value>
            <value>
                <fullName>3er</fullName>
                <isActive>false</isActive>
                <label>3er</label>
            </value>
            <value>
                <fullName>3M</fullName>
                <isActive>false</isActive>
                <label>3M</label>
            </value>
            <value>
                <fullName>5er</fullName>
                <isActive>false</isActive>
                <label>5er</label>
            </value>
            <value>
                <fullName>AAP</fullName>
            </value>
            <value>
                <fullName>Ackermann</fullName>
            </value>
            <value>
                <fullName>Acumed</fullName>
                <isActive>false</isActive>
                <label>Acumed</label>
            </value>
            <value>
                <fullName>Ad Mirabiles</fullName>
            </value>
            <value>
                <fullName>AECUOS</fullName>
            </value>
            <value>
                <fullName>AESCULAP</fullName>
            </value>
            <value>
                <fullName>AESCULAP Anatomics</fullName>
            </value>
            <value>
                <fullName>alloPlus</fullName>
            </value>
            <value>
                <fullName>ALPHANORM</fullName>
            </value>
            <value>
                <fullName>Alphatec Spine</fullName>
            </value>
            <value>
                <fullName>Amedica</fullName>
                <isActive>false</isActive>
                <label>Amedica</label>
            </value>
            <value>
                <fullName>AMPLITUDE</fullName>
            </value>
            <value>
                <fullName>AneticAid</fullName>
                <isActive>false</isActive>
                <label>AneticAid</label>
            </value>
            <value>
                <fullName>Applied Spine Technologies</fullName>
                <isActive>false</isActive>
                <label>Applied Spine Technologies</label>
            </value>
            <value>
                <fullName>AQ Implants</fullName>
            </value>
            <value>
                <fullName>Archus</fullName>
                <isActive>false</isActive>
                <label>Archus</label>
            </value>
            <value>
                <fullName>ARD</fullName>
            </value>
            <value>
                <fullName>ARGE MEDIZINTECHNIK</fullName>
                <isActive>false</isActive>
                <label>ARGE MEDIZINTECHNIK</label>
            </value>
            <value>
                <fullName>ARGOMEDICAL</fullName>
            </value>
            <value>
                <fullName>ARTHREX</fullName>
            </value>
            <value>
                <fullName>ARTIQO</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>Ascsension</fullName>
                <isActive>false</isActive>
                <label>Ascsension</label>
            </value>
            <value>
                <fullName>ATESSOS MEDICAL</fullName>
                <isActive>false</isActive>
                <label>ATESSOS MEDICAL</label>
            </value>
            <value>
                <fullName>Athrex</fullName>
                <isActive>false</isActive>
                <label>Athrex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>