force-app/main/default/objects/Potential_Product__c/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anterior Thoracolumbar</fullName>
            </value>
            <value>
                <fullName>Arthroscopy</fullName>
            </value>
            <value>
                <fullName>Articular Surface</fullName>
                <isActive>false</isActive>
                <label>Articular Surface</label>
            </value>
            <value>
                <fullName>Bone Substitute</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Cages</fullName>
            </value>
            <value>
                <fullName>Cervical</fullName>
            </value>
            <value>
                <fullName>Compression Hip Screws</fullName>
                <isActive>false</isActive>
                <label>Compression Hip Screws</label>
            </value>
            <value>
                <fullName>Cranial Fixation</fullName>
            </value>
            <value>
                <fullName>Cranioplasty</fullName>
            </value>
            <value>
                <fullName>Cups</fullName>
            </value>
            <value>
                <fullName>Dermatome</fullName>
            </value>
            <value>
                <fullName>Dynardi</fullName>
                <isActive>false</isActive>
                <label>Dynardi</label>
            </value>
            <value>
                <fullName>Dynesys</fullName>
                <isActive>false</isActive>
                <label>Dynesys</label>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>External Fixation</fullName>
            </value>
            <value>
                <fullName>Femorals</fullName>
            </value>
            <value>
                <fullName>Finger</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>Hand &amp; Wrist</fullName>
            </value>
            <value>
                <fullName>Heads</fullName>
            </value>
            <value>
                <fullName>Hips &amp; Knees</fullName>
            </value>
            <value>
                <fullName>IM Nails</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Lavage</fullName>
            </value>
            <value>
                <fullName>Liners</fullName>
                <isActive>false</isActive>
                <label>Liners</label>
            </value>
            <value>
                <fullName>Lumbar</fullName>
            </value>
            <value>
                <fullName>Mesher</fullName>
            </value>
            <value>
                <fullName>Midface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>