force-app/main/default/objects/Potential_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Antegrade Femur</fullName>
            </value>
            <value>
                <fullName>Antegrade Humerus</fullName>
            </value>
            <value>
                <fullName>Artifical Disc</fullName>
            </value>
            <value>
                <fullName>Astrid</fullName>
            </value>
            <value>
                <fullName>Bailey</fullName>
            </value>
            <value>
                <fullName>Band</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Bone Substitute</fullName>
            </value>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Cannulated Screws</fullName>
            </value>
            <value>
                <fullName>Cemented</fullName>
            </value>
            <value>
                <fullName>CEP</fullName>
            </value>
            <value>
                <fullName>Clamp</fullName>
            </value>
            <value>
                <fullName>Custom Made System</fullName>
            </value>
            <value>
                <fullName>Deformity</fullName>
            </value>
            <value>
                <fullName>Dermatomes</fullName>
            </value>
            <value>
                <fullName>Distal Femur</fullName>
            </value>
            <value>
                <fullName>Distal Tibia</fullName>
            </value>
            <value>
                <fullName>Dynamic Stabilization</fullName>
            </value>
            <value>
                <fullName>ECT</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Fingergrundgelenk-Prothese</fullName>
            </value>
            <value>
                <fullName>Fingermittelgelenk-Prothese</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Forte Screws</fullName>
            </value>
            <value>
                <fullName>Fracture</fullName>
            </value>
            <value>
                <fullName>Gekoppelt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>