force-app/main/default/objects/Potential_Product__c/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
    <language>en_US</language>
</ListView>