force-app/main/default/objects/Potential_Product__c/listViews/EMEA_Trauma.listView-meta.xml
<ListView>
    <fullName>EMEA_Trauma</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Trauma</value>
    </filters>
    <label>Trauma</label>
    <language>nl_NL</language>
    <sharedTo>
        <roleAndSubordinatesInternal>EMEA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>