force-app/main/default/objects/Potential_Product__c/listViews/Robotics.listView-meta.xml
<ListView>
    <fullName>Robotics</fullName>
    <columns>NAME</columns>
    <columns>Provider__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Robotics</value>
    </filters>
    <label>Robotics</label>
</ListView>